Bump to JDK 21